--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="diseño 3D, impresión 3D, Reparación 3D">
     <title>Nuestros Servicios</title>
     <link rel="icon" type="image/png" href="../img/logo.png" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -16,6 +17,8 @@
 <body class="grid-conteiner">
     <header class="header-grid">
         <img src="../img/logo.png" alt="logo">
+        <input class="check" type="checkbox" name="menu" id="checked">
+        <label for="checked"><img class="menu" src="../img/menu-hamburgesa.svg" alt="menu hamburgesa"> </label>
         <nav>
             <ul>
                 <li><a href="../index.html">INICIO</a></li>
@@ -32,39 +35,61 @@
         </div>
         <div class="flex-colum">
             <div class="card-conteiner card-conteiner-servicio">
-                <div class="text-conteiner text-conteiner-sm">
+                <div data-aos="fade-right" data-aos-duration="1000" class="text-conteiner text-conteiner-sm">
                     <h2 class="subtitulo">Impresión 3D</h2>
                     <p>Imprimimos tus diseños 3D y te asesoramos para que tengas la mejor experiencia posible.
                         Cantactate
                         con nosotros y pedinos presupuesto.</p>
                 </div>
-                <div class="icono-conteiner"><img class="icono" src="../img/3d-printer.svg" alt="3d-printer"></div>
+                <div data-aos="fade-left" data-aos-duration="1000" class="icono-conteiner"><img class="icono"
+                        src="../img/3d-printer.svg" alt="3d-printer"></div>
             </div>
             <div class="card-conteiner card-conteiner-servicio">
-                <div class="text-conteiner text-conteiner-sm">
+                <div data-aos="fade-right" data-aos-duration="1000" class="text-conteiner text-conteiner-sm">
                     <h2 class="subtitulo">Diseño 3D</h2>
                     <p>Realizamos tus diseños 3D en caso de no contar con experiencia en diseño 3D. Cantactate
                         con nosotros y pedinos presupuesto.</p>
                 </div>
-                <div class="icono-conteiner"><img class="icono" src="../img/diseno-3d.svg" alt="3d-design"></div>
+                <div data-aos="fade-left" data-aos-duration="1000" class="icono-conteiner"><img class="icono"
+                        src="../img/diseno-3d.svg" alt="3d-design"></div>
             </div>
             <div class="card-conteiner card-conteiner-servicio">
-                <div class="text-conteiner text-conteiner-sm">
+                <div data-aos="fade-right" data-aos-duration="1000" class="text-conteiner text-conteiner-sm">
                     <h2 class="subtitulo">Reparación</h2>
                     <p>Si sos nuevo en el mundo 3D y necesitas apoyo tecnico podemos calibrar y/o
                         reparar tu impresora 3D. No dudes en consultarnos.</p>
                 </div>
-                <div class="icono-conteiner"><img class="icono" src="../img/reparar.svg" alt="fix"></div>
-
+                <div data-aos="fade-left" data-aos-duration="1000" class="icono-conteiner"><img class="icono"
+                        src="../img/reparar.svg" alt="fix"></div>
             </div>
         </div>
     </div>
-    <footer class="footer footer-grid">
-        <span>moll3D Todos los derechos reservados</span>
-        <img src="../img/instagram W&B.svg" alt="logo" width="30" height="30">
-        <img src="../img/whatsapp W&B.svg" alt="logo" width="30" height="30">
-        <img src="../img/gmail W&B.svg" alt="logo" width="30" height="30">
+    <footer class="footer-grid">
+        <div class="footer footer-grid">
+            <div data-aos="fade-right" data-aos-duration="1000">
+                <h2>Moll3D</h2>
+                <p>
+                    Capital,<br>San Juan,<br>Argentina <br><br><strong>Teléfono: </strong> +54 264 4747261
+                    <br><strong>Email: </strong>impmoll3d@gmail.com
+                </p>
+            </div>
+            <div data-aos="fade-left" data-aos-duration="1000">
+                <h2>Seguinos en nuestras redes</h2>
+                <p><a href="https://www.instagram.com/moll_3d/" target="_blank"><img src="../img/instagram W&B.svg"
+                            alt="logo" width="30" height="30"></a>
+                </p>
+            </div>
+        </div>
+        <div class="footer footer-grid">
+            <span class="footer-bottom">&copy;Copyright Moll3D. All Rights Reserved</span>
+            <span class="footer-bottom">Developed by <a class="footer-link"
+                    href="https://www.linkedin.com/in/diego-moll-34a52a183" target="_blank">Diego Moll</a></span>
+        </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
