--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -66,14 +66,14 @@
     </div>
     <footer class="footer-grid">
         <div class="footer footer-grid">
-            <div data-aos="fade-right" data-aos-duration="1000">
+            <div data-aos="fade-up" data-aos-duration="1000">
                 <h2>Moll3D</h2>
                 <p>
                     Capital,<br>San Juan,<br>Argentina <br><br><strong>Teléfono: </strong> +54 264 4747261
                     <br><strong>Email: </strong>impmoll3d@gmail.com
                 </p>
             </div>
-            <div data-aos="fade-left" data-aos-duration="1000">
+            <div data-aos="fade-up" data-aos-duration="1000">
                 <h2>Seguinos en nuestras redes</h2>
                 <p><a href="https://www.instagram.com/moll_3d/" target="_blank"><img src="../img/instagram W&B.svg"
                             alt="logo" width="30" height="30"></a>
