--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-    <div class="container-fluid background">
+    <div class="conteiner   background">
         <h1 class="titulo titulo--blue">NUESTROS TRABAJOS</h1>
     </div>
     <div class="text-trabajo">
@@ -76,14 +76,14 @@
     </div>
     <footer>
         <div class="footer footer-sin-grid footer-boots">
-            <div data-aos="fade-right" data-aos-duration="1000">
+            <div data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="h4 font-weight-bold">Moll3D</h2>
                 <p>
                     Capital,<br>San Juan,<br>Argentina <br><br><strong>Teléfono: </strong> +54 264 4747261
                     <br><strong>Email: </strong>impmoll3d@gmail.com
                 </p>
             </div>
-            <div data-aos="fade-left" data-aos-duration="1000">
+            <div data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="h4 font-weight-bold">Seguinos en nuestras redes</h2>
                 <p><a href="https://www.instagram.com/moll_3d/" target="_blank"><img src="../img/instagram W&B.svg"
                             alt="logo" width="30" height="30"></a>
