revise la ortografia

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <p class="text-welcome">Somos una empresa familiar que se encarga de imprimir las distintas necesidades
                     de
                     nuestros clientes.
-                    Podemos imprimir aquellos diseños que viste en la web o redes sociales, como tambien tus propios
-                    diseños. ¿Tenés una idea y no podes materializarla porque no sabes diseñar? no importa, nosotros te
+                    Podemos imprimir aquellos diseños que viste en la web o redes sociales, como también tus propios
+                    diseños. ¿Tenes una idea y no podés materializarla porque no sabes diseñar? no importa, nosotros te
                     ayudamos y hacemos tu diseño.</p>
                 <div class="content-boton">
                     <a class="boton" href="pages/contacto.html">Comencemos un proyecto</a>
@@ -57,23 +57,24 @@
                 <h3 class="subtitulo" data-aos="fade-up" data-aos-duration="1000">Imprimimos tus diseños 3D</h3>
                 <div class="icono-text" data-aos="fade-up" data-aos-duration="1000">Imprimimos tus diseños 3D y te
                     asesoramos para que tengas la mejor experiencia
-                    posible. Cantactate con nosotros y pedinos presupuesto.</div>
+                    posible. Cantáctate con nosotros y pedinos presupuesto.</div>
             </div>
             <div class="cards-home">
                 <div class="icono-conteiner" data-aos="fade-up" data-aos-duration="1000"><img class="icono"
                         src="img/diseno-3d.svg" alt="3d-design"></div>
                 <h3 class="subtitulo" data-aos="fade-up" data-aos-duration="1000">Diseñamos tus ideas</h3>
-                <div class="icono-text" data-aos="fade-up" data-aos-duration="1000">Realizamos tus diseños 3D en caso de
-                    no contar con experiencia en diseño 3D.
-                    Cantactate con nosotros y pedinos presupuesto.</div>
+                <div class="icono-text" data-aos="fade-up" data-aos-duration="1000">Realizamos tus diseños 3D, en caso
+                    de
+                    no contar con experiencia.
+                    Cantáctate con nosotros y pedinos presupuesto.</div>
             </div>
             <div class="cards-home">
                 <div class="icono-conteiner" data-aos="fade-up" data-aos-duration="1000"><img class="icono"
                         src="img/reparar.svg" alt="fix"></div>
                 <h3 class="subtitulo" data-aos="fade-up" data-aos-duration="1000">Reparamos tus impresoras</h3>
                 <div class="icono-text" data-aos="fade-up" data-aos-duration="1000">Si sos nuevo en el mundo 3D y
-                    necesitas apoyo tecnico podemos calibrar y/o
-                    reparar tu impresora 3D. No dudes en consultarnos.</div>
+                    necesitas apoyo técnico podemos calibrar y/o
+                    reparar tu impresora. No dudes en consultarnos.</div>
             </div>
         </div>
     </section>
