--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -39,23 +39,19 @@
                 <div data-aos="fade-up" data-aos-duration="1000" class="text-conteiner text-conteiner-lg">
                     <h2 class="name-conocenos">Diego Moll</h2>
                     <h3>Bioingeniero y desarrollador Frontend</h3>
-                    <p>Diego empezó con el emprendimiento en 2018, primiero armó su primera impresora 3D viendo
-                        tutoriales
-                        en
-                        internet ayudandose de los conocimientos aprendidos en la Universidad. Se encarga de hacer los
-                        diseños
-                        3D y mantenimiento preventivo de las impresoras 3D.</p>
+                    <p>Diego empezó con el emprendimiento en 2018, primero armó su primera impresora 3D viendo
+                        tutoriales en internet, ayudándose de los conocimientos aprendidos en la universidad. Se encarga
+                        de hacer los
+                        diseños y mantenimiento preventivo de las impresoras.</p>
                 </div>
             </div>
             <div class="card-conteiner card-conteiner-conocenos">
                 <img class="img-conocenos" data-aos="fade-up" data-aos-duration="1000" src="../img/leo.png" alt="Leo">
                 <div data-aos="fade-up" data-aos-duration="1000" class="text-conteiner text-conteiner-lg">
                     <h2>Leandro Moll</h2>
-                    <h3>Estudiante de Ing. Quimica</h3>
-                    <p>Leandro se unió al staff en el año 2020 creando una pagina de Instagram desde la cual Encargado
-                        de
-                        las
-                        redes sociales y de las impresiones 3D</p>
+                    <h3>Estudiante de Ing. Química</h3>
+                    <p>Leandro se unió al staff en el año 2020.Es él encargado de las redes sociales y de las
+                        impresiones 3D</p>
                 </div>
             </div>
         </div>
