--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -38,8 +38,7 @@
                 <div data-aos="fade-right" data-aos-duration="1000" class="text-conteiner text-conteiner-sm">
                     <h2 class="subtitulo">Impresión 3D</h2>
                     <p>Imprimimos tus diseños 3D y te asesoramos para que tengas la mejor experiencia posible.
-                        Cantactate
-                        con nosotros y pedinos presupuesto.</p>
+                        Cantáctate con nosotros y pedinos presupuesto.</p>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="icono-conteiner"><img class="icono"
                         src="../img/3d-printer.svg" alt="3d-printer"></div>
@@ -47,7 +46,7 @@
             <div class="card-conteiner card-conteiner-servicio">
                 <div data-aos="fade-right" data-aos-duration="1000" class="text-conteiner text-conteiner-sm">
                     <h2 class="subtitulo">Diseño 3D</h2>
-                    <p>Realizamos tus diseños 3D en caso de no contar con experiencia en diseño 3D. Cantactate
+                    <p>Realizamos tus diseños 3D, en caso de no contar con experiencia. Cantáctate
                         con nosotros y pedinos presupuesto.</p>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="icono-conteiner"><img class="icono"
@@ -56,8 +55,8 @@
             <div class="card-conteiner card-conteiner-servicio">
                 <div data-aos="fade-right" data-aos-duration="1000" class="text-conteiner text-conteiner-sm">
                     <h2 class="subtitulo">Reparación</h2>
-                    <p>Si sos nuevo en el mundo 3D y necesitas apoyo tecnico podemos calibrar y/o
-                        reparar tu impresora 3D. No dudes en consultarnos.</p>
+                    <p>Si sos nuevo en el mundo 3D y necesitas apoyo técnico podemos calibrar y/o
+                        reparar tu impresora. No dudes en consultarnos.</p>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="icono-conteiner"><img class="icono"
                         src="../img/reparar.svg" alt="fix"></div>
