--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -36,7 +36,7 @@
     </div>
     <div class="text-trabajo">
         <p>Te mostramos algunas de las cosas que imprimimos en Moll3D. Todas ellas están hechas con PLA y pintadas con
-            acrílico cubierto con un esmalte que le da más vida útil a las piezas evitando que las mismas se desgasten.
+            acrílico cubierto con un esmalte que les da más vida útil a las piezas evitando que las mismas se desgasten.
         </p>
     </div>
     <div id="carouselExampleIndicators" class="carousel slide w-75 mb-5 mx-auto" data-ride="carousel">
@@ -71,7 +71,7 @@
     </div>
     <div class="container d-flex flex-column pb-5">
         <h3 class="text-white align-self-center">¡No dudes en consultarnos presupuesto!</h3>
-        <a class="btn btn-primary mt-4 mb-4 align-self-center" href="contacto.html">Contactanos</a>
+        <a class="btn btn-primary mt-4 mb-4 align-self-center" href="contacto.html">Contáctanos</a>
 
     </div>
     <footer>
